--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Create and Save your own Veen diagrams here.</title>
+<title>Create and Save your own Venn diagrams here.</title>
 </head>
 
 <style type="text/css">
