Fix unterminated HTML label

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
 <div id="controls">
   <h3>Venn Diagram Generator</h3>
-  <label>Diagram size (px x px):</label>
+  <label>Diagram size (px):</label>
   <input type="text" id="size_textbox" value="600"/>
   <br>
-  <label>Number of cirlces
+  <label>Number of cirlces</label>
   <select id="size_selector">
     <option>2</option>
     <option>3</option>
