--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
     <div id="controls">
-        <h3>Venn Diagram Generator</h3>
+        <h3>Venn Diagram Generator X</h3>
         <label>Diagram size (px):</label>
         <input type="text" id="size_textbox" value="600" />
         <br>
