--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
         </div>
         <br>
 
-        <button id="export_button">Export as PNG</button>
+        <button id="export_svg_button">Save as SVG</button>
+        <button id="export_png_button">Save as PNG</button>
         <hr>
         <p>Click the text in the diagram to edit it</p>
     </div>
@@ -57,8 +58,7 @@
 
     </div>
 
-    <footer style="position:fixed; bottom: 5px">
-        This generator is (C) 2016 Bradley Momberger and released under the MIT License. Source code at <a href="https://github.com/airhadoken/venn-diagram-generator">https://github.com/airhadoken/venn-diagram-generator</a>
+    <footer style="position:fixed; bottom: 5px"></a>
     </footer>
 
     <!-- script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script -->
